[package]
name = "GetByNum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.16.0"
tokio = { version = "1.2.0",features = ["full"] }
regex = "*"
serde_json = '1.0.66'
sqlx = { version = "0.3.5", features = [ "mysql" ]}
postgres = " 0.19.1"
anyhow = "1.0"
async-std = { version = "1.8.0", features = ["attributes"]}
